# zbze_crawler

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  README.ru.md  SECURITY.md  pyproject.toml  readme.md  requirements.in
data/apkbr_ru_rss/: apkbr_ru_rss.jl
zbze_scrapy/: scrapy.cfg
zbze_scrapy/zbze_scrapy/: items.py  middlewares.py  pipelines.py  settings.py
zbze_scrapy/zbze_scrapy/spiders/: apkbr_ru.py  apkbr_ru_feed.py  elgkbr_ru.py  oshhamaho.py
